# bw

./: .gitmodules  CMakeLists.txt
assets/: sin_tan_exp.txt  text_50Hz_44100Hz_16bitPCM.txt
main_project/: main.cpp
miniaudio/: miniaudio.h
